Simple custom errors

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "custom-errors",
+  "name": "simple-custom-errors",
   "version": "1.0.0",
-  "description": "Custom Errors creating via JavaScript for better error handling",
+  "description": "Simple Custom Errors creating via JavaScript for better error handling",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
