--- a/package.json
+++ b/package.json
@@ -1,16 +1,37 @@
 {
   "name": "simple-custom-errors",
-  "version": "0.2.7",
+  "version": "0.3.0",
   "description": "Simple Custom Error creating via JavaScript for better error handling",
-  "main": "index.js",
+  "main": "./lib/index.js",
   "scripts": {
+    "lint": "eslint src",
+    "build": "cross-env BABEL_ENV=production babel src --out-dir lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "lib"
+  ],
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com:bartversluijs/simple-custom-errors.git"
   },
-  "author": "Bart Versluijs",
+  "author": "Bart Versluijs <bartv@vedicium.com>",
   "license": "ISC",
-  "homepage": "https://github.com/bartversluijs/simple-custom-errors#readme"
+  "bugs": {
+    "url": "https://github.com/bartversluijs/simple-custom-errors/issues"
+  },
+  "homepage": "https://github.com/bartversluijs/simple-custom-errors#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.1",
+    "@babel/plugin-transform-classes": "^7.10.1",
+    "@babel/preset-env": "^7.10.1",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-add-module-exports": "^1.0.2",
+    "cross-env": "^7.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2"
+  }
 }
