--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "simple-custom-errors",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "description": "Simple Custom Error creating via JavaScript for better error handling",
   "main": "./lib/index.js",
   "scripts": {
-    "lint": "eslint src",
-    "build": "cross-env BABEL_ENV=production babel src --out-dir lib",
+    "dev": "ts-node --log-error ./examples/api.ts",
+    "lint": "eslint . --ext .ts",
+    "build": "npm run lint && rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "publish": "npm run build && npm publish"
   },
   "files": [
-    "lib"
+    "build"
   ],
   "repository": {
     "type": "git",
@@ -27,12 +28,16 @@
     "@babel/core": "^7.10.1",
     "@babel/plugin-transform-classes": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-add-module-exports": "^1.0.2",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2"
+    "eslint-plugin-import": "^2.20.2",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.6"
   }
 }
